--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="cache-control" content="no-cache">
-  <link rel="icon" href="imgs/icon.jpg">
+  <link rel="icon" href="imgs/Icon1.jpg">  
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Online Menu</title>
+  <title>Menu Pastelaria Boa Fama</title>
   <meta name="description" content="Um cardápio online para seu Negócio">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -23,10 +23,12 @@
         <h3 class="list-subtitle">Total</h3>
         <p id="list-total"><b>R$0</b></p>
         <br>
-        <div id="address-group">
-          <label for="address">endereço</label>
+        <div id="address-group"> 
+          <label for="nameclient">Cliente</label>
+          <input type="text" id="nameclient">         
+          <label for="address">Endereço</label>
           <input type="text" id="address">
-          <button id="list-btn">pedir</button>
+          <button id="list-btn">Pedir</button>
         </div>
       </div>
     </div>
